<resources>
    <string name="app_name">E-CommerceApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_to_route">Welcome Back To Route</string>
    <string name="please_sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="user_name_title">User Name</string>
    <string name="enter_your_name">enter your email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_account">Don’t have an account? Create Account</string>
    <string name="enter_your_password">enter your password</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">enter your mobile number.</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="password_title">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="confirmation_password">confirmation password</string>
    <string name="home_search_hint">What do you search for?</string>
    <string name="favorites_nav_tab_title">Favorites</string>
    <string name="home_nav_tab_title">Home</string>
    <string name="categories_nav_tab_title">Categories</string>
    <string name="account_nav_tab_title">Account</string>
    <string name="view_all">view all</string>
    <string name="categories">categories</string>
    <string name="laptops_and_accessories"><![CDATA[Laptops & Accessories]]></string>
    <string name="shop_now">Shop Now</string>
    <string name="home_appliance">Home Appliance</string>
    <string name="electronics_offers">Electronics offers</string>
</resources>